testshells: allow glob patterns
It would be practical to process glob patterns in the paths
specified in shellsrc, so that one line can resolve to multiple
shells. The price is that arguments are not possible in that case.

share/doc/modernish/utils/testshells.sh:
- Move the code to prefix ' ' or './' to a $script that begins with
  '-' up to the valdidation stage. There was no reason for that to
  be in the main processing loop.
- In the main processing loop, detect the presence of the glob
  characters '[', '?' or '*' in each line. If present, try to
  resolve the glob pattern. If it resolves, then shellquote each
  result for eval, else don't treat it differently.
- Add a nested processing loop as there is now potentially more
  than one shell for each line read.

--- a/share/doc/modernish/utils/README
+++ b/share/doc/modernish/utils/README
@@ -17,6 +17,10 @@ with the scripts in examples/.
 # When you first run the program, testshells attempts to gather a list of
 # Bourne/POSIX-derived shells on your system. It then writes shellsrc and
 # offers to let you edit the file before proceeding.
+#
+# Each path in shellsrc may be edited either to add arguments to invoke the
+# shell with those arguments, or to use shell glob patterns so that one line
+# may resolve to multiple shells (in which case arguments are not possible).
 
 --- git-restore-timestamps.sh ---
 # Git timestamp restorer. This sets the timestamps on working directory
